# moleculib

./: .buildinfo  LICENSE  README.md  abstract.html  assembly.html  env.yml  example.py  fetch_standard.py  genindex.html  index.html  modules.html  molecule.html  molecule.tests.html  noxfile.py  nucleic.html  objects.inv  protein.html  protein.tests.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  sequence.html  setup.cfg  setup.py  standard_components.cif  temp-plot.html  test.md
.doctrees/: abstract.doctree  assembly.doctree  environment.pickle  index.doctree  modules.doctree  molecule.doctree  molecule.tests.doctree  nucleic.doctree  protein.doctree  protein.tests.doctree  sequence.doctree
.doctrees/autoapi/: index.doctree
.github/workflows/: sphinx.yml  tests.yml
_modules/: index.html
_modules/abstract/: dataset.html
_modules/nucleic/: alphabet.html  datum.html  utils.html
_modules/protein/: alphabet.html  batch.html  datum.html  jax_utils.html  metrics.html  transform.html  utils.html
_modules/sequence/: datum.html
_sources/: assembly.rst.txt  index.rst.txt
_sources/autoapi/: index.rst.txt
_static/css/: insegel.css
autoapi/: index.html
autoapi/moleculib/: index.html
data/: pids_all.txt
docs/: abstract.rst  complex.rst  conf.py  index.rst  modules.rst  molecule.rst  molecule.tests.rst  nucleic.rst  protein.rst  protein.tests.rst  sequence.rst
docs/_templates/: custom-class-template.rst
moleculib/: README.md  __init__.py  example.py  metrics.py  setup.cfg
moleculib/QM9/: datum.py
moleculib/abstract/: dataset.py  metrics.py
moleculib/assembly/: dataset.py  datum.py  metrics.py  transform.py
moleculib/benchmarks/: seq_recovery.py  structure_prediction.py
moleculib/complex/: dataset.py  datum.py  transform.py
moleculib/data/: pids_sanity.txt
moleculib/graphics/: py3Dmol.py
moleculib/loss/: chemistry.py  label.py  (+1 more)
myproject.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
protein/: batch.py  dataset.py  datum.py  transform.py
(+224 files in other folders)
