[flake8]
ignore = E741, E203, W503, E731
max-line-length = 127
max-complexity = 64
select = B,C,E,F,W,T4,B9
exclude = .eggs,*.egg,build,dist,docs/_build,notebook

[pydocstyle]
select = D415, D403

[metadata]
name = moleculib
version = attr: moleculib.__version__
description = Molecule library
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    einops
    ordered_set
    biopython
    biotite
    pandas
    tqdm
    mendeleev
    simple_pytree
    plotly
